# VidhiSetu

./: .dockerignore  .env  App.tsx  Dockerfile  README.md  app.py  index.css  index.html  inference.py  languages.ts  legal_env.py  metadata.json  openenv.yaml  package-lock.json  package.json  pyproject.toml  repair_lang.ts  translate_env.ts  tsc_error.txt
components/: CategoryCard.tsx  CommonLawsPage.tsx  ContactModal.tsx  DottedGlowBackground.tsx  Footer.tsx  Hero.tsx  LawMitraPage.tsx  LegalAssistant.tsx  LegalModal.tsx  Navbar.tsx  OpenEnvSimulator.tsx  SideDrawer.tsx  Toast.tsx  TopicPage.tsx  TopicRequestModal.tsx
data/: locales.json  locales_all.json  topics.ts  topics_all.json
openenv/: .dockerignore  Dockerfile  README.md  _test_endpoints.py  inference.py  legal_env.py  pyproject.toml  requirements.txt
openenv/data/: legalDb.json
scripts/: build_remaining.mjs  build_static.mjs  build_topics.mjs  generate_locales.mjs  generate_locales_2.mjs
server/: app.py
services/: legalService.ts  translationService.ts
utils/: i18n.ts
